# windsim

./: .gitignore  README.md  noise_config.toml  pyproject.toml
example/: config.toml
example_repository/projects/default/: setup.toml
example_repository/shared/: config.toml
resources/repository/projects/foo/: setup.toml
src/noise_simulation/: _assets.py  coordinate_reference_systems.py  model.py  setup_logging.py  suggested_plan.py
src/noise_simulation/computation/harmonoise/: __init__.py  harmonoise.py
src/noise_simulation/computation/iso9613/: __init__.py  interim.py  ta_laerm.py
src/noise_simulation/config/: __init__.py  area_specs.py  config.py  crs_specs.py
src/noise_simulation/config/sections/: computation.py  debug.py  input.py  output.py  root.py
src/noise_simulation/input/: _recipes.py  _utils.py  area.py  area_of_interest.py  atmospheric_coefficients.py  chunksize.py  coarseness.py  elevation.py  exposure_times.py  frequencies.py  full_turbines.py  raw_turbines.py  receiver_groups.py  receivers.py  sound_power_levels.py  timeslice_durations.py  transformed_turbines.py  turbine_types.py  working_crs.py
src/noise_simulation/output/: output_asset.py  plotting.py
src/noise_simulation/verification/: debug_elevation.py  generate_dummy_receivers.py  verify_iso_lines.py
src/windsim/: __init__.py  cli.py
src/windsim/common/: __init__.py
src/windsim/common/assets/: __init__.py  _assets.py  _recipes.py  cerra_store.py  dask_cluster.py  fabdem.py  raw_receivers.py  raw_turbine_models.py  raw_turbines.py  receivers_dict.py  setup.py  turbine_models_dict.py  turbines_dict.py
src/windsim/common_assetdefs/: _assets.py  _recipes.py  cerra_heights.py  cerra_store.py  dask_cluster.py  fabdem.py
src/windsim/data_sources/cerra_heights/: __init__.py  cerra_client.py  pipeline.py
src/windsim/data_sources/common/: copernicus.py  explode_dict.py
src/windsim/data_sources/fabdem/: __init__.py
(+62 files in other folders)
