[project]
name = "windsim"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cartopy>=0.25.0",
    "cdsapi>=0.7.7",
    "cfgrib>=0.9.15.1",
    "click>=8.3.1",
    "contextily>=1.7.0",
    "dask[array,complete,dataframe,diagnostics,distributed]>=2025.12.0",
    "geopandas>=1.1.2",
    "graphviz>=0.21",  # needed for dask visualization
    "matplotlib>=3.10.8",
    "matplotlib-scalebar>=0.9.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "planner",
    "pyproj>=3.7.2",
    # "pyrender>=0.1.45",
    "rioxarray>=0.20.0",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "soltrack>=0.3.5",
    "toml>=0.10.2",
    "triangle>=20250106",  # needed for trimesh
    "trimesh[easy,recommend]>=4.10.1",
    "xarray[accel,io,parallel,viz]>=2025.12.0",
]

[tool.uv.sources]
planner = { git = "https://github.com/pschlo/planner" }

[project.scripts]
windsim = "windsim.cli:cli"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
